# libgtkcanvas

./: .gitignore  Canvas.vala  CanvasItem.vala  Makefile  MoveAction.vala  Window.vala  com.github.akiraux.libgtkcanvas.json  com.github.philip-scott.libgtkcanvas.json  meson.build  readme.md
data/: gtkcanvas.pc.in  meson.build
demo/: Window.vala  meson.build
docs/: meson.build
src/: Window.vala  gtkcanvas.deps.in  meson.build  namespace-info.vala.in
src/Utils/: HoverAction.vala  HoverEffect.vala  MoveAction.vala  meson.build
src/Widgets/: Canvas.vala  CanvasItem.vala  Item.vala  ItemResizer.vala  meson.build
src/Widgets/Shapes/: GSVGtkShapeImage.vala  ShapeCircle.vala  ShapeRectangle.vala  ShapeSVG.vala  meson.build
